@@ -1559,6 +1559,22 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|util
+operator|.
+name|VersionInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|zookeeper
 operator|.
 name|ClusterStatusTracker
@@ -15601,6 +15617,11 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+name|VersionInfo
+operator|.
+name|logVersion
+argument_list|()
+expr_stmt|;
 name|Configuration
 name|conf
 init|=
