@@ -761,6 +761,22 @@ name|org
 operator|.
 name|apache
 operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|util
+operator|.
+name|VersionInfo
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|thrift
 operator|.
 name|TException
@@ -6645,6 +6661,11 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
+name|VersionInfo
+operator|.
+name|logVersion
+argument_list|()
+expr_stmt|;
 name|doMain
 argument_list|(
 name|args
