@@ -23,11 +23,55 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|hbase
 operator|.
 name|VersionAnnotation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|master
+operator|.
+name|HMaster
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
 import|;
 end_import
 
@@ -40,6 +84,24 @@ specifier|public
 class|class
 name|VersionInfo
 block|{
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|VersionInfo
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
 specifier|private
 specifier|static
 name|Package
@@ -182,6 +244,53 @@ argument_list|()
 else|:
 literal|"Unknown"
 return|;
+block|}
+specifier|public
+specifier|static
+name|void
+name|logVersion
+parameter_list|()
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"HBase "
+operator|+
+name|getVersion
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Subversion "
+operator|+
+name|getUrl
+argument_list|()
+operator|+
+literal|" -r "
+operator|+
+name|getRevision
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Compiled by "
+operator|+
+name|getUser
+argument_list|()
+operator|+
+literal|" on "
+operator|+
+name|getDate
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 specifier|static
