@@ -261,6 +261,8 @@ Release 0.91.0 - Unreleased
    HBASE-3961  Add Delete.setWriteToWAL functionality (Bruno Dumon)
    HBASE-3928  Some potential performance improvements to Bytes/KeyValue
    HBASE-3982  Improvements to TestHFileSeek
+   HBASE-3940  HBase daemons should log version info at startup and possibly
+               periodically (Li Pi)
 
   TASKS
    HBASE-3559  Move report of split to master OFF the heartbeat channel
